--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -17,7 +17,8 @@
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
 	},
 	"require-dev": {
-		"mikey179/vfsStream": "1.1.*",
-		"phpunit/phpunit": "4.* || 5.*"
+		"mikey179/vfsstream": "1.1.*",
+		"phpunit/phpunit": "4.* || 5.*",
+		"fzaninotto/faker": "1.9.1"
 	}
 }
